02_microservice/config-server/eureka-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eureka-server
  namespace: kuku
  labels:
    app: eureka-server
spec:
  replicas: 1  # 필요한 경우 복제본을 늘릴 수 있습니다.
  selector:
    matchLabels:
      app: eureka-server
  template:
    metadata:
      labels:
        app: eureka-server
    spec:
      containers:
        - name: eureka-server
          image: hongseonghwa/kuku-eureka-server:0.0.3  # 빌드한 Docker 이미지
          ports:
            - containerPort: 8761  # Eureka 서버가 사용하는 포트
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8761
            initialDelaySeconds: 15
            periodSeconds: 20
      restartPolicy: Always
