02_microservice/config-server/gateway-server-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-server
  namespace: kuku
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway-server
  template:
    metadata:
      labels:
        app: gateway-server
    spec:
      containers:
        - name: gateway-server
          image: hongseonghwa/kuku-gateway-server:0.0.2
          ports:
            - containerPort: 8070
