02_microservice/config-server/config-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: kuku
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: config-server
