02_microservice/config-server/eureka-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
  namespace: kuku
  labels:
    app: eureka-server
spec:
  selector:
    app: eureka-server
  ports:
    - protocol: TCP
      port: 8761  # 외부에서 접근할 포트
      targetPort: 8761  # 컨테이너의 포트
  type: ClusterIP  # 기본적으로 클러스터 내부에서만 접근 가능
