02_microservice/config-server/gateway-server-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gateway-server
  namespace: kuku
spec:
  type: ClusterIP
  ports:
    - port: 8070
      targetPort: 8070
  selector:
    app: gateway-server
