02_microservice/config-server/item-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: item-service
  namespace: kuku
spec:
  type: ClusterIP
  ports:
    - port: 5000
      targetPort: 5000
  selector:
    app: item-service
