02_microservice/config-server/item-service-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: item-ingress
  namespace: kuku
spec:
  rules:
    - http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: gateway-server
                port:
                  number: 8070
